compiler/tests/fa/errors/unused_import.salam
// انتظار: خطا۰۸۲
// زبان: فارسی
واردکردن ریاضی

تابع اصلی:
    چاپ "سلام"
تمام
